--- a/pages/learn/hello/hello-4.mdx
+++ b/pages/learn/hello/hello-4.mdx
@@ -1,3 +1,5 @@
+import { Callout } from 'nextra-theme-docs'
+
 # Tact Hello World
 
 ## Receivers and Getters
@@ -83,3 +85,7 @@ yarn build
 
 ![Tact compile scheme](public/tact-hello-world/tact-compiler-scheme.png)
 >If you faced some compile issue and can't figure out what is wrong, just compare with target contract placed in `sources/example/increment.tact` or [here](https://github.com/ton-community/tact-guide-template/blob/main/sources/example/increment.tact).
+
+<Callout type="default">
+If you faced some compile issue and can't figure out what is wrong, just compare with target contract placed in `sources/example/increment.tact` or [here](https://github.com/ton-community/tact-guide-template/blob/main/sources/example/increment.tact).
+</Callout>
