--- a/pages/learn/hello/hello-5.mdx
+++ b/pages/learn/hello/hello-5.mdx
@@ -1,3 +1,5 @@
+import { Callout } from 'nextra-theme-docs'
+
 # Tact Hello World
 
 ## Contract deployment
@@ -15,7 +17,9 @@ Now we on finale stage. We need to deploy our contract to Blockchain. To do this
 
 ![Tact deploy](public/tact-hello-world/tact-hello-world-6.png)
 
-> Note, this design of deployment used just for clearness. Deploying via Wallet App, Working with public API convenient for learning purposes and a bad way for real products.
+<Callout type="warning">
+Note, this design of deployment used just for clearness. Deploying via Wallet App, Working with public API convenient for learning purposes and a bad way for real products.
+</Callout>
 
 
 ### Tactical Practice #5
@@ -52,4 +56,6 @@ It will ask from you wallet you want use, choose what you used before(Tonkeeper/
 
 ![deployment-1](public/tact-hello-world/tact-deployment-process-2.png)
 
->If you faced some compile issue and can't figure out what is wrong, just compare with target contract placed in `sources/example/increment.tact` or [here](https://github.com/ton-community/tact-guide-template/blob/main/sources/example/increment.tact).
+<Callout type="default">
+If you faced some compile issue and can't figure out what is wrong, just compare with target contract placed in `sources/example/increment.tact` or [here](https://github.com/ton-community/tact-guide-template/blob/main/sources/example/increment.tact).
+</Callout>
