--- a/pages/learn/jetton/jetton-3.mdx
+++ b/pages/learn/jetton/jetton-3.mdx
@@ -1,6 +1,10 @@
+import { Callout } from 'nextra-theme-docs'
+
 # Jetton contract
 ## Jetton deployment
-> Did you notice something unclear, incorrect or get stuck with some issue in guide? Please ask a question in the Telegram [chat](https://t.me/tondev_eng) or text me directly [@iftryalexg](https://t.me/iftryalexg). Guide will be updated ASAP and all unclear points will be clarified 🚒💦🔥.
+<Callout type="warning">
+Did you notice something unclear, incorrect or get stuck with some issue in guide? Please ask a question in the Telegram [chat](https://t.me/tondev_eng) or text me directly [@iftryalexg](https://t.me/iftryalexg). Guide will be updated ASAP and all unclear points will be clarified 🚒💦🔥.
+</Callout>
 
 ### Jetton tact demo project
 
