--- a/pages/learn/jetton/jetton-1.mdx
+++ b/pages/learn/jetton/jetton-1.mdx
@@ -1,8 +1,12 @@
+import { Callout } from 'nextra-theme-docs'
+
 #  Jetton contract
 
 ## Digital token issue
 
-> Did you notice something unclear, incorrect or get stuck with some issue in guide? Please ask a question in the Telegram [chat](https://t.me/tondev_eng) or text me directly [@iftryalexg](https://t.me/iftryalexg). Guide will be updated ASAP and all unclear points will be clarified 🚒💦🔥.
+<Callout type="warning">
+Did you notice something unclear, incorrect or get stuck with some issue in guide? Please ask a question in the Telegram [chat](https://t.me/tondev_eng) or text me directly [@iftryalexg](https://t.me/iftryalexg). Guide will be updated ASAP and all unclear points will be clarified 🚒💦🔥.
+</Callout>
 
 ### Jetton is a part of TON
 
@@ -14,7 +18,9 @@ The scope of this article are:
 * Remind how Fungible Tokens works in TON blockchain.
 * Research how jetton standard could be implemented in the Tact language.
 
-> ⚠️ Note, that `jetton.tact` is used for learning goals and was not thoroughly tested.
+<Callout type="warning">
+Note, that `jetton.tact` is used for learning goals and was not thoroughly tested.
+</Callout>
 
 ### Jetton as example of designing architecture
 
