--- a/pages/learn/hello/hello-6.mdx
+++ b/pages/learn/hello/hello-6.mdx
@@ -28,8 +28,8 @@ Check your `counter` value after this, make sure that counter value changed.
 
 #### What to read next?
 
-* [Wallet.tact contract deployment through public API](../wallet)
-* [Jetton.tact contract overview and deployment](../jetton)
+* [Wallet.tact contract deployment through public API](../wallet/wallet-1)
+* [Jetton.tact contract overview and deployment](../jetton/jetton-1)
 
 #### Useful social
 * [Tact Telegram chat](https://t.me/tactlang)
