--- a/pages/learn/jetton/jetton-1.mdx
+++ b/pages/learn/jetton/jetton-1.mdx
@@ -12,7 +12,7 @@ Did you notice something unclear, incorrect or get stuck with some issue in guid
 
 Jettons is implementation fungible tokens on the TON Blockchain. Fungible Tokens means that they have a property that makes each Token be exactly the same (in type and value) as another Token. From the side of users - it's digital tool in blockchain, that allow to organize business process of distribution and keeping funds with zero trust functions in transaction.
 In TON Blockchain Jettons declared according to [Jetton standard](https://github.com/ton-blockchain/TEPs/blob/master/text/0074-jettons-standard.md). This standard already fully successfully
-implemented with FunC language and support in libraries in various languages. Some of them, you can find and research [here](docs/develop/dapps/defi/tokens).
+implemented with FunC language and support in libraries in various languages. Some of them, you can find and research [here](https://ton.org/docs/develop/dapps/defi/tokens).
 
 The scope of this article are:
 * Remind how Fungible Tokens works in TON blockchain.
