--- a/pages/learn/wallet/wallet-3.mdx
+++ b/pages/learn/wallet/wallet-3.mdx
@@ -61,7 +61,7 @@ You can learn more about launching and testing your own tact contract from Jetto
 ## What to read next?
 
 Useful materials:
-* [Jetton.tact contract overview and deployment](../jetton)
+* [Jetton.tact contract overview and deployment](../jetton/jetton-1)
 * [TON Hello World part 1: Step by step guide for working with your first TON wallet](https://ton-community.github.io/tutorials/01-wallet/)
 
 ### Useful social
