--- a/pages/learn/wallet/wallet-1.mdx
+++ b/pages/learn/wallet/wallet-1.mdx
@@ -18,7 +18,7 @@ For this project you should install
 * **Git**. Essential tool for every developer to work with repositories. Download it [here](https://git-scm.com/downloads).
 * **NodeJS**. We will use JavaScript with TypeScript mode as the most popular choice for dApp development on TON. Download it [here](https://nodejs.org/en/download/).
 * **JavaScript IDE**. Your normal choice for development. [VSCode](https://code.visualstudio.com/download), for example.
-* **Wallet app**. You need one of TON noncustodial testnet [wallet app](docs/participate/wallets/apps) (better with support Walletv4), for example [Sandbox](https://apps.apple.com/app/ton-development-wallet/id1607857373)/[Tonkeeper](https://tonkeeper.com/). This is as part of simplify demonstration, you also can get access to your wallet from code, example added in demo. 
+* **Wallet app**. You need one of TON noncustodial testnet [wallet app](https://ton.org/docs/participate/wallets/apps) (better with support Walletv4), for example [Sandbox](https://test.tonhub.com/)/[Tonkeeper](https://tonkeeper.com/). This is as part of simplify demonstration, you also can get access to your wallet from code, example added in demo. 
 
 - [Tact SDK and libraries full list](docs/develop/tact/introduce/tact-sdk)
 
@@ -31,7 +31,7 @@ git clone https://github.com/ton-community/tact-wallet
 cd tact-wallet
 ```
 
-This project has ready to use TACT compiler, typescript + jest with [ton-emulator](https://github.com/ton-community/ton-emulator), example how to test and deploy.
+This project has ready to use TACT compiler, typescript + jest with [ton-emulator](https://github.com/ton-core/ton-emulator), example how to test and deploy.
 You have ready-to-use commands configured for contract. Try to input them in terminal and look how it works:
 
 ```bash
@@ -47,8 +47,8 @@ In the `tact-wallet/sources/` directory placed core project files, that defines 
 
 1. File `wallet.tact` contract on Tact language, that will be compiled with Tact compiler in `yarn build`
 2. File `wallet.spec.ts` contents unit tests for `yarn tests` command. This command allow to launch local tests on your local IDE. Not necessary for deployment.
-3. File `wallet.deploy.ts` is a helper, that allow to deploy your `wallet.tact` compiled file(src/output) with deployment link. From the beginning you can deploy your smart contract via [Sandbox](https://apps.apple.com/app/ton-development-wallet/id1607857373)/[Tonkeeper](https://tonkeeper.com/) application.
-4. Describes alternative deployment script `wallet.deploy-api.ts` for `yarn deploy-api` according to your `contract.tact` to send deployment message from deployment wallet. You need to input your deployment wallet 24 words [here](sources/wallet.deploy-api.ts#L19).
+3. File `wallet.deploy.ts` is a helper, that allow to deploy your `wallet.tact` compiled file(src/output) with deployment link. From the beginning you can deploy your smart contract via [Sandbox](https://test.tonhub.com/)/[Tonkeeper](https://tonkeeper.com/) application.
+4. Describes alternative deployment script `wallet.deploy-api.ts` for `yarn deploy-api` according to your `contract.tact` to send deployment message from deployment wallet. You need to input your deployment wallet 24 words [here](https://github.com/ton-community/tact-wallet/blob/main/sources/wallet.deploy-api.ts#L19).
 
 
 ### What is wallet contract general idea?
