Improve code blocks

--- a/pages/learn/hello/hello-1.mdx
+++ b/pages/learn/hello/hello-1.mdx
@@ -42,7 +42,7 @@ Get ready to build your own blockchain creation! First, you'll need to gather a 
 
 After the preparation of developer tools is done, download *tact-guide-template* project and open it in your IDE.
 
-```bash
+```bash copy
 git clone https://github.com/ton-community/tact-guide-template
 cd tact-guide-template
 ```
