--- a/pages/learn/hello/hello-2.mdx
+++ b/pages/learn/hello/hello-2.mdx
@@ -26,7 +26,7 @@ When a smart contract is delivered in TON Blockchain as bytecode he becomes **de
 </Callout>
 
 As a result we will use three yarn commands to work with Tact project:
-```bash
+```bash copy
 yarn build # To build contract
 yarn test # To test contract
 yarn deploy # To deploy contract
@@ -36,13 +36,13 @@ yarn deploy # To deploy contract
 #### Get template from GitHub
 
 Update dependencies in project via yarn:
-```bash
+```bash copy
 yarn install
 ```
 
 Now check, that everything is ok, input command:
 
-```bash
+```bash copy
 yarn build
 ```
 This command will initiate the Tact compiler to build the current `tact.contract`.
