--- a/pages/learn/wallet/wallet-3.mdx
+++ b/pages/learn/wallet/wallet-3.mdx
@@ -6,7 +6,7 @@
 
 For deployment wallet we have two demo options to run:
 
-```bash
+```bash copy
 yarn deploy
 yarn deploy-api
 ```
@@ -23,7 +23,7 @@ Step list here:
 1. Install wallet application on device from which we will do deployment.
 2. Get test Toncoins on our wallet application with bot.
 3. Run deployment script for deployment:
-```bash
+```bash copy
 yarn deploy
 ```
 4. Use deployment link or QR with wallet application and confirm the sending of outgoing message.
@@ -41,7 +41,7 @@ Step list here:
 1. Install wallet application on device from which we will do deployment and get toncoins.(Using same wallet from previous step)
 2. Input your test wallet 24 words in deployment script `soucre/wallet.deploy-api.ts`.
 3. Run deployment with script:
-```bash
+```bash copy
 yarn deploy-api
 ```
 4. Notice in blockchain explorer our new smart contract deployed according address in console log where we sent the deployment message.
