--- a/pages/learn/wallet/wallet-1.mdx
+++ b/pages/learn/wallet/wallet-1.mdx
@@ -26,7 +26,7 @@ For this project you should install
 ### Tact wallet demo project
 Get tact-wallet project from git:
 
-```bash
+```bash copy
 git clone https://github.com/ton-community/tact-wallet
 cd tact-wallet
 ```
@@ -34,7 +34,7 @@ cd tact-wallet
 This project has ready to use TACT compiler, typescript + jest with [ton-emulator](https://github.com/ton-core/ton-emulator), example how to test and deploy.
 You have ready-to-use commands configured for contract. Try to input them in terminal and look how it works:
 
-```bash
+```bash copy
 yarn test # To test contract
 yarn build # To build contract
 yarn deploy # To deploy contract via deployment link
